# test_tensorrt_cpp_load

./: CMakeLists.txt  CMakeLists.txt_func  README.md  demo_trt.py  main.cpp  main_func.cpp
include/: test.h
lib/: libtest.so.1.0.0
src/: CMakeLists.txt  CMakeLists_static.txt  test.cpp
